# lustre-release

./: .cvsignore  .editorconfig  .gitignore  .gitreview  .mailmap  BackupAndRestore.xml  BenchmarkingTests.xml  COPYING  ChangeLog  ConfigurationFilesModuleParameters.xml  ConfiguringFailover.xml  ConfiguringLNET.xml  ConfiguringLNet.xml  ConfiguringLustre.xml  ConfiguringQuotas.xml  ConfiguringStorage.xml  DataOnMDT.xml  FileLevelRedundancy.xml  Glossary.xml  III_LustreAdministration.xml  II_LustreInstallConfig.xml  IV_LustreTuning.xml  I_LustreIntro.xml  InstallOverview.xml  InstallingLustre.xml  InstallingLustreFromSourceCode.xml  Kbuild  LNETSelfTest.xml  LNetConfigurationApi.xml  LNetMultiRail.xml  LNetSelfTest.xml  LUSTRE-VERSION-GEN  LazySizeOnMDT.xml  LustreDebugging.xml  LustreHSM.xml  LustreMaintenance.xml  LustreMonitoring.xml  LustreNodemap.xml  LustreOperations.xml  LustreProc.xml  (+51 more)
Documentation/man1/: Makefile.am  lfs-changelog.1  lfs-changelog_clear.1  lfs-data_version.1  lfs-df.1  lfs-fid2path.1  lfs-find.1  lfs-flushctx.1  lfs-getdirstripe.1  lfs-getname.1  lfs-getsom.1  lfs-getstripe.1  lfs-heat_get.1  lfs-heat_set.1  lfs-hsm.1  lfs-ladvise.1  lfs-migrate.1  lfs-mirror-copy.1  lfs-mirror-extend.1  lfs-mirror-read.1  lfs-mirror-resync.1  lfs-mirror-split.1  lfs-mirror-verify.1  lfs-mkdir.1  lfs-path2fid.1  lfs-pcc-attach.1  lfs-pcc-attach_fid.1  lfs-pcc-delete.1  lfs-pcc-detach.1  lfs-pcc-detach_fid.1  lfs-pcc-pin.1  lfs-pcc-unpin.1  lfs-pcc.1  lfs-project.1  lfs-quota.1  lfs-setquota.1  lfs-setstripe.1  lfs-somsync.1  lfs-swap_layouts.1  lfs-unlink_foreign.1  (+2 more)
Documentation/man3/: Makefile.am  llapi_changelog_clear.3  llapi_changelog_free.3  llapi_changelog_get_fd.3  llapi_changelog_in_buf.3  llapi_changelog_recv.3  llapi_changelog_set_xflags.3  llapi_changelog_start.3  llapi_changelog_start_user.3  llapi_convert_str2mask.3  llapi_create_volatile_param.3  llapi_dir_create.3  llapi_dir_create_foreign.3  llapi_dir_create_pool.3  llapi_fd2fid.3  llapi_fd2parent.3  llapi_fid2path.3  llapi_fid2path_at.3  llapi_fid_hash.3  llapi_fid_parse.3  llapi_fid_to_handle.3  llapi_file_create_foreign.3  llapi_file_get_stripe.3  llapi_file_open.3  llapi_fsync.3  llapi_get_data_version.3  llapi_get_fsname_instance.3  llapi_get_lum_file_fd.3  llapi_get_mdt_index_by_fid.3  llapi_get_obd_count.3  llapi_getname.3  llapi_group_lock.3  llapi_group_unlock.3  llapi_heat_set.3  llapi_hsm_action_begin.3  llapi_hsm_action_get_dfid.3  llapi_hsm_copytool_register.3  llapi_hsm_copytool_unregister.3  llapi_hsm_data_version_set.3  llapi_ladvise.3  (+46 more)
Documentation/man7/: Makefile.am  lustre.7  lustreapi.7
Documentation/man8/: Makefile.am  l_getidentity.8  lctl-barrier.8  lctl-changelog_register.8  lctl-conf_param.8  lctl-del_ost.8  lctl-device_list.8  lctl-erase_lcfg.8  lctl-find_param.8  lctl-get_param.8  lctl-help_param.8  lctl-lcfg_clear.8  lctl-lcfg_erase.8  lctl-lcfg_fork.8  lctl-lfsck-query.8  lctl-lfsck-start.8  lctl-lfsck-stop.8  lctl-lfsck_query.8  lctl-lfsck_stop.8  lctl-list_param.8  lctl-llog-cancel.8  lctl-llog-info.8  lctl-llog_catlist.8  lctl-llog_info.8  lctl-llog_print.8  lctl-nodemap-activate.8  lctl-nodemap-add-idmap.8  lctl-nodemap-add-offset.8  lctl-nodemap-add-range.8  lctl-nodemap-add.8  lctl-nodemap-banlist-add.8  lctl-nodemap-banlist-del.8  lctl-nodemap-del-idmap.8  lctl-nodemap-del-offset.8  lctl-nodemap-del-range.8  lctl-nodemap-del.8  lctl-nodemap-fileset-add.8  lctl-nodemap-fileset-del.8  lctl-nodemap-fileset-modify.8  lctl-nodemap-info.8  (+51 more)
cc-plugins/: FindStatic.cpp  Makefile.am
config/: .gitignore  Kbuild  Makefile.am  Makefile.checkstack  Makefile.codetags  Makefile.dkms-deb  Makefile.dkms-rpm  Makefile.exports.in  Makefile.pkg-deb  Makefile.pkg-rpm  Rules.in  ac_pkg_swig.m4  ac_python_devel.m4  embed-btf.sh  kerberos5.m4  lustre-build-ldiskfs.m4  lustre-build-linux.m4  lustre-build-zfs.m4  lustre-build.m4  lustre-compiler-plugins.m4  lustre-core.m4  lustre-erasurecode.m4  lustre-libcfs.m4  lustre-lnet.m4  lustre-manual.m4  lustre-toolchain.m4  lustre-version.m4
ldiskfs/: .cvsignore  .gitignore  ChangeLog  Makefile.am  Makefile.in  README  autoMakefile.am  autogen.sh  configure.ac  ldiskfscvs  lustre-ldiskfs.spec.in
ldiskfs/config/: .gitignore  ldiskfs-build.m4
ldiskfs/ldiskfs/: .cvsignore  .gitignore  Makefile.in  autoMakefile.am  ldiskfs_config.h.in
lib/libcfs/: Makefile.am  l_ioctl.c  param.c  parser.c
libsysio/: .cvsignore  .gitignore  AUTHORS  INSTALL  Makefile.am  README  Rules.make  autogen.sh  config.guess  config.sub  configure.ac  configure.in
libsysio/include/: cplant-yod.h  creds.h  dev.h  file.h  fs.h  inode.h  module.mk  mount.h  namespace.h  native.h  sysio-cmn.h  sysio.h  xtio.h
libsysio/misc/: init-env.sh
libsysio/src/: access.c  chdir.c  chmod.c  chown.c  dev.c  dup.c  fcntl.c  file.c  file_hack.c  fs.c  fsync.c  getdirentries.c  init.c  inode.c  ioctl.c  ioctx.c  iowait.c  link.c  lseek.c  mkdir.c  mknod.c  module.mk  mount.c  namei.c  open.c  readdir.c  readlink.c  reconcile.c  rename.c  rmdir.c  rw.c  stat.c  stat64.c  statvfs.c  statvfs64.c  stddir.c  stdlib.c  symlink.c  truncate.c  unlink.c  (+1 more)
libsysio/tests/: Makefile.am  README  help.c  (+38 more)
lnet/: .cvsignore  .gitignore  ChangeLog  Kernelenv.in  LICENSE  LICENSE.cray  Makefile  Makefile.am  Makefile.in  Makefile.mk  Rules.linux  archdep.m4  autoMakefile.am  build.m4  configure.in  portalsconf.m4
lustre/: .cvsignore  .gitignore  BUGS  BUILDING  ChangeLog  LICENSE  LICENSE.cray  LLNL_ChangeLog  LLNL_Changelog  Makefile  Makefile.am  Makefile.in  Makefile.mk  README  Rules  Rules.in  archdep.m4  autoMakefile.am  autogen.sh  configure.in  cvstest  mkinstalldirs  nodist
lustre-iokit/: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  lustre-iokit.spec.in
rustreapi/: .gitignore  .rusty-hook.toml  .taplo.toml  Cargo.toml  README.md  justfile  rust-toolchain  rustreapi-test.sh
snmp/: Lustre-MIB.txt  Makefile.am  README.install  lustre-snmp-trap.c  lustre-snmp-trap.h  lustre-snmp-util.c  lustre-snmp-util.h  lustre-snmp.c  lustre-snmp.h
(+6814 files in other folders)
