# SPDX-License-Identifier: GPL-2.0-only

#
# This file is part of Lustre, http://www.lustre.org/
#
# cc-plugins/Makefile.am
#
# Automake file for compiler plugins.
#

EXTRA_DIST =

if CC_PLUGINS
lib_LTLIBRARIES = libfindstatic.la
libfindstatic_la_SOURCES = FindStatic.cpp
EXTRA_DIST += FindStatic.cpp
endif # CC_PLUGINS
