# SPDX-License-Identifier: GPL-2.0

#
# This file is part of Lustre, http://www.lustre.org/
#
# config/Makefile.am
#
# Template to generate Makefile
#

EXTRA_DIST  = lustre-build.m4 lustre-build-linux.m4
EXTRA_DIST += lustre-build-ldiskfs.m4 lustre-build-zfs.m4
EXTRA_DIST += lustre-toolchain.m4 lustre-compiler-plugins.m4
