# SPDX-License-Identifier: GPL-2.0

#
# This file is part of Lustre, http://www.lustre.org/
#
# Template to generate Makefile
#

EXTRA_DIST  = lustre-build.m4 lustre-build-linux.m4
EXTRA_DIST += lustre-build-ldiskfs.m4 lustre-build-zfs.m4
EXTRA_DIST += lustre-toolchain.m4 lustre-compiler-plugins.m4
EXTRA_DIST += lustre-core.m4 kerberos5.m4 ac_pkg_swig.m4
EXTRA_DIST += ac_python_devel.m4 lustre-lnet.m4
EXTRA_DIST += lustre-libcfs.m4
