# SPDX-License-Identifier: GPL-2.0

#
# This file is part of Lustre, http://www.lustre.org/
#
# Template to generate Makefile
#

EXTRA_DIST  = lustre-build.m4 lustre-build-linux.m4
EXTRA_DIST += lustre-build-ldiskfs.m4 lustre-build-zfs.m4
EXTRA_DIST += lustre-toolchain.m4
EXTRA_DIST += lustre-core.m4 kerberos5.m4
EXTRA_DIST += lustre-lnet.m4
EXTRA_DIST += lustre-libcfs.m4 lustre-erasurecode.m4
EXTRA_DIST += Makefile.exports.in
EXTRA_DIST += Makefile.pkg-rpm
EXTRA_DIST += Makefile.dkms-rpm
EXTRA_DIST += Makefile.pkg-deb
EXTRA_DIST += Makefile.dkms-deb
EXTRA_DIST += Makefile.checkstack
