AC_INIT
AC_CONFIG_AUX_DIR([.])
AM_INIT_AUTOMAKE(lustre-iokit,1.3.0)
AC_PATH_PROGS(BASH, bash)
AC_PATH_PROGS(PERL, perl)
RELEASE="1"
AC_SUBST(RELEASE)

AC_OUTPUT(
lustre-iokit.spec
Makefile
sgpdd-survey/Makefile
obdfilter-survey/Makefile
ost-survey/Makefile
ior-survey/Makefile
stats-collect/Makefile
)
