AC_PREREQ([2.57])
AC_INIT([lustre-iokit],[2.3.65], [http://bugs.hpdd.intel.com/])
AC_CONFIG_AUX_DIR([.])
AM_INIT_AUTOMAKE
AC_PATH_PROGS(BASH, bash)
AC_PATH_PROGS(PERL, perl)
RELEASE="1"
AC_SUBST(RELEASE)

AC_OUTPUT(
lustre-iokit.spec
Makefile
sgpdd-survey/Makefile
obdfilter-survey/Makefile
ost-survey/Makefile
ior-survey/Makefile
mds-survey/Makefile
stats-collect/Makefile
)
